2017-11-18  Markus Gans  <guru.mail@muenster.de>
	* Improved command line paramenter handling
	* New command line paramenter --no-terminal-detection
	* New command line paramenter --no-color-change

2017-11-11  Markus Gans  <guru.mail@muenster.de>
	* Improved code coverage tests

2017-11-08  Markus Gans  <guru.mail@muenster.de>
	* Simulate invisible characters on terminals that do not 
	  support this attribute

2017-11-04  Markus Gans  <guru.mail@muenster.de>
	* Version 0.4.0
	* Change license from GPL v3 to LGPL v3

2017-11-03  Markus Gans  <guru.mail@muenster.de>
	* Small NewFont improvements
	* Fixed bug: The window example called a callback method after 
	  the child data was deleted

2017-11-02  Markus Gans  <guru.mail@muenster.de>
	* Move fonts into the root directory 

2017-10-30  Markus Gans  <guru.mail@muenster.de>
	* Fix scrollview functionality with new inheritance structure
	* Add a standardized close confirmation dialog
	* Only <final/final.h> can now be directly integrated in programs

2017-10-29  Markus Gans  <guru.mail@muenster.de>
	* Adaptation of the inheritance diagrams in the header files
	* Add a standardized cb_exitApp callback method to FApplication

2017-10-27  Markus Gans  <guru.mail@muenster.de>
	* FWidget now inherits directly from FObject 

2017-10-23  Markus Gans  <guru.mail@muenster.de>
	* A FListView tree branch can now be expand and collapsed 
	  with a single click

2017-10-19  Markus Gans  <guru.mail@muenster.de>
	* Optimized Color palette (less saturated colors)

2017-10-18  Markus Gans  <guru.mail@muenster.de>
	* Expand or collapse a tree element with a double-click
	* FListView::adjustViewport() improved

2017-10-15  Markus Gans  <guru.mail@muenster.de>
	* FObject double free prevention of fc::empty_string

2017-10-14  Markus Gans  <guru.mail@muenster.de>
	* Fixed a bug in the FObject check of parent objects
	* Replace the deprecated readdir_r function (CVE-2013-4237)
	* First implementation of a tree view in the FListView 